<resources>
    <string name="app_name">Week 10 java</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="initialize">initialize</string>
    <string name="backward"><![CDATA[<-]]></string>
    <string name="shoutout">ShoutOut</string>
    <string name="refresh">Refresh</string>
    <string name="go">Go!</string>
    <string name="url">URL</string>
</resources>
