<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="664dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="41dp" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:background="#8C8C8C"
        android:ems="10"
        android:hint="@string/url"
        android:inputType="textUri|textShortMessage" />

    <Button
        android:id="@+id/goUrl"
        android:layout_width="75dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-9dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/go" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="66dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-7dp"
        android:layout_marginEnd="-5dp"
        android:layout_marginRight="-5dp"
        android:layout_toStartOf="@+id/goUrl"
        android:layout_toLeftOf="@+id/goUrl"
        android:text="@string/refresh"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/javascriptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginEnd="214dp"
        android:layout_marginRight="214dp"
        android:layout_marginBottom="-4dp"
        android:text="@string/shoutout"
        android:textSize="12sp" />

    <Button
        android:id="@+id/initialize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="-5dp"
        android:text="@string/initialize" />

    <Button
        android:id="@+id/pageForward"
        android:layout_width="67dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-1dp"
        android:layout_marginRight="-1dp"
        android:layout_marginBottom="-2dp"
        android:text="@string/forward" />

    <Button
        android:id="@+id/pageBackward"
        android:layout_width="67dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="-2dp"
        android:text="@string/backward" />

</RelativeLayout>